--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ejercicio4",
+  "name": "practica-sockets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server/index.js",
+    "dev":"nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
